Added heroes and artifacts
