# server/swagger_server/swagger/swagger.yaml
@@ -632,12 +632,12 @@ definitions:
         example: "HP"
         enum:
         - "ACCURACY"
-        - "CRITRATE"
+        - "CRIT_RATE"
         - "ATTACK"
         - "EVASION"
-        - "ARMORBREAK"
-        - "SKILLDAMAGE"
-        - "CRITDAMAGE"
+        - "ARMOR_BREAK"
+        - "SKILL_DAMAGE"
+        - "CRIT_DAMAGE"
         - "HP"
       level:
         type: "string"
@@ -672,9 +672,22 @@ definitions:
         example: "KNIGHTS_VOW"
         description: "What artifact this refers to"
         enum:
-        - "QUEENS_CROWN"
+        - "SATANS_POWER"
+        - "YAKSHA"
+        - "DARK_DESTROYER"
+        - "SUNS_HYMN"
+        - "BURNING_SOUL"
+        - "EYE_OF_HEAVEN"
         - "WIND_WALKER"
+        - "SCORCHING_SUN"
+        - "DRAGONBLOOD"
+        - "SOUND_STEP"
         - "KNIGHTS_VOW"
+        - "PRIMEVAL_SOUL"
+        - "QUEENS_CROWN"
+        - "SOUL_TORRENT"
+        - "GIFT_OF_CREATION"
+        - "ETERNAL_CURSE"
       stars:
         type: "integer"
         example: 6
